--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "server",
+  "name": "lms",
   "version": "1.0.0",
   "main": "server.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
-    "server":"nodemon server.js",
+    "server": "nodemon server.js",
     "start": "node server.js"
   },
   "keywords": [],
@@ -12,15 +12,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@clerk/express": "^1.3.49",
-    "cloudinary": "^2.5.1",
+    "@clerk/express": "^1.3.59",
+    "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.10.1",
-    "multer": "^1.4.5-lts.1",
+    "mongoose": "^8.13.1",
+    "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.9",
-    "stripe": "^17.6.0",
+    "stripe": "^17.7.0",
     "svix": "^1.42.0"
   }
 }
